readme für Cygwin angepasst

--- a/README
+++ b/README
@@ -5,34 +5,37 @@ MinGW:
 
 	download "GLUT for MinGW" from http://mywebpage.netscape.com/PtrPck/glut.htm
 	extract include/ and lib/ into MinGW directory
-	extract glut32.dll into "CG Madness" source directory or /windows/system32
+	extract glut32.dll into "CG Madness" source directory or windows/system32
 
 	download "GLEW"-source from http://glew.sourceforge.net/
 	start msys
 	install from glew source directory with "make install GLEW_DEST=/mingw"
 	you may need to copy glew32.dll from /mingw/bin 
-	  into "CG Madness" source directory or /windows/system32 to play without MSYS
+	  into "CG Madness" source directory or windows/system32 to play without MSYS
 
-	now you can go to "CG Madness" source directory and compile with "make"
+	now you can go into "CG Madness" source directory and build with "make"
 
 Cygwin:
 
 	install cygwin with gcc, make, etc. from http://www.cygwin.com/
 
 	download "GLUT for MinGW" from http://mywebpage.netscape.com/PtrPck/glut.htm
-	extract include/ and lib/ into /cygwin/usr/local/ directory
-	extract glut32.dll into "CG Madness" source directory or /windows/system32
+	extract content of include/ into cygwin/usr/include/w32api/ directory
+	extract content of lib/ into cygwin/lib/w32api/ directory
+	extract glut32.dll into "CG Madness" source directory or windows/system32
 
 	download "GLEW"-source from http://glew.sourceforge.net/
 	start cygwin
-	install from glew source directory with "make install"
-	you may need to copy glew32.dll from /cygwin/usr/local/bin
-	  into "CG Madness" source directory or /windows/system32 to play without Cygwin
+	go into glew source directory
+	build glew with "make CFLAGS.EXTRA=-mno-cygwin LDFLAGS.EXTRA=-mno-cygwin"
+	copy content of glew/include into cygwin/usr/include/w32api/
+	copy content of glew/lib into cygwin/lib/w32api/
+	also copy glew/lib/glew32.dll into "CG Madness" source directory or windows/system32
 
-	now you can go to "CG Madness" source directory and compile with "make"
+	now you can go into "CG Madness" source directory and build with "make"
 
 Linux:
 
 	required packages: freeglut3-dev libglew-dev (or equivalent)
 
-	to compile just type "make"
+	to build just go into source directory and type "make"
