--- a/AUTHORS
+++ b/AUTHORS
@@ -13,5 +13,5 @@ most levels:
 water animation & graphics:
 	Gordon Heger
 
-help with Mac OS version:
+assistance with Mac OS version:
 	Masiar Farahani
